--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
   publish = "dist"
   command = "npm run build"
+
+[[redirects]]
+  from = "*"
+  to = "https://github.com/hackupc/easter-egg-web"
+  status = 404
