--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,6 @@
   command = "npm run build"
 
 [[redirects]]
-  from = "*"
+  from = "/*"
   to = "https://github.com/hackupc/easter-egg-web"
   status = 404
